2012-07-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* alephextra.c: Must #define DLLPROC before reading alephd.h.

2012-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* alephextra.c [W32TeX]: #define DLLPROC for aleph.dll.

2012-06-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* om16bit.ch: Aleph uses 256 math font families.

2012-04-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* eobase.ch: Fixed a typo in TeX text (for e-TeX).

2012-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* com16bit.ch: Remove test for end-of-file after undump.

2012-02-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* com16bit.ch: Ensure dvi file size < 2GB.

2011-12-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* com16bit.ch, om16bit.ch: Consistency of `constants':
	Aleph requires min_halfword==0.

2011-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* com16bit.ch, om16bit.ch: Consistency of `constants'.
	* omocp.ch: Adjust to null, i.e., min_halfword <0.

	* aleph.test (new): Just testing 'aleph -version'.
	* Makefile (removed): Unused.
	* am/aleph.am: Adjusted.

2011-09-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* com16bit.ch.ch (print_file_line): Bug fix: avoid uninitialized
	lineno - from ../tex.ch.
	* eobase.ch: Slightly reformulate printing of current line -
	from ../etexdir/etex.ch.

2011-09-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* alephbis.c (runexternalocp): Declare tempenv as const.

2011-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* com16bit.ch: Cast runsystem() arg to string.

2011-03-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/aleph.am: Use AM_CFLAGS instead of aleph_CFLAGS.

2011-03-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	eobase.ch: Remove unused (commented) e-TeX changes.

2011-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* aleph-pool.h, eomega.ech, etex.ch, omega.ch[012], omxml.ch
	(removed): Obsolete.
	* am/aleph.am (EXTRA_DIST): Adapt.

2011-01-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
